showed data in UI instead of just raw data, used css grid instead of table

--- a/src/screens/status/status.scss
+++ b/src/screens/status/status.scss
@@ -8,11 +8,8 @@
   .objView {
     width: 95%;
   }
-}
-
-.table-wrapper {
-  overflow-x: auto;
-  table {
-    width: 100%;
+  .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   }
 }
